clean file; add latex gitignore

--- a/doc/icacsis/bare_conf.tex
+++ b/doc/icacsis/bare_conf.tex
@@ -70,37 +70,38 @@
 % author names and affiliations
 % use a multiple column layout for up to three different
 % affiliations
-%\author{
-%	\IEEEauthorblockN{Rahman Pujianto}
-%	\IEEEauthorblockA{Faculty of Computer Science\\
-%	Universitas Indonesia\\
-%	Email: rahman.pujianto@ui.ac.id\\}
-%	\and
-%	\IEEEauthorblockN{Heru Suhartanto}
-%	\IEEEauthorblockA{Faculty of Computer Science\\
-%	Universitas Indonesia\\
-%	Email: heru@cs.ui.ac.id\\}
-%}
 
-%\author{
-%	\IEEEauthorblockN{
-%		Rahman Pujianto\IEEEauthorrefmark{1},
-%		Yohanes Gultom\IEEEauthorrefmark{1},
-%		Ari Wibisono\IEEEauthorrefmark{1},
-%		Arry Yanuar\IEEEauthorrefmark{2},			
-%		Heru Suhartanto\IEEEauthorrefmark{1}
-%	}\\
-%	
-%	\IEEEauthorblockA{
-%		\IEEEauthorrefmark{1}Faculty of Computer Science, Universitas Indonesia\\
-%		rahman.pujianto@ui.ac.id, yohanes.gultom@ui.ac.id, ari.w@cs.ui.ac.id, heru@cs.ui.ac.id
-%	}\\
-%	
-%	\IEEEauthorblockA{
-%		\IEEEauthorrefmark{2}Department of Pharmacy, Faculty of Mathematics and Natural Sciences, Universitas Indonesia\\
-%		arry.yanuar@ui.ac.id
-%	}
-%}
+\author{
+	\IEEEauthorblockN{Rahman Pujianto}
+	\IEEEauthorblockA{Faculty of Computer Science\\
+	Universitas Indonesia\\
+	Email: rahman.pujianto@ui.ac.id\\}
+	\and
+	\IEEEauthorblockN{Heru Suhartanto}
+	\IEEEauthorblockA{Faculty of Computer Science\\
+	Universitas Indonesia\\
+	Email: heru@cs.ui.ac.id\\}
+}
+
+\author{
+	\IEEEauthorblockN{
+		Rahman Pujianto\IEEEauthorrefmark{1},
+		Yohanes Gultom\IEEEauthorrefmark{1},
+		Ari Wibisono\IEEEauthorrefmark{1},
+		Arry Yanuar\IEEEauthorrefmark{2},			
+		Heru Suhartanto\IEEEauthorrefmark{1}
+	}\\
+	
+	\IEEEauthorblockA{
+		\IEEEauthorrefmark{1}Faculty of Computer Science, Universitas Indonesia\\
+		rahman.pujianto@ui.ac.id, yohanes.gultom@ui.ac.id, ari.w@cs.ui.ac.id, heru@cs.ui.ac.id
+	}\\
+	
+	\IEEEauthorblockA{
+		\IEEEauthorrefmark{2}Department of Pharmacy, Faculty of Mathematics and Natural Sciences, Universitas Indonesia\\
+		arry.yanuar@ui.ac.id
+	}
+}
 
 % make the title area
 \maketitle
